# toucan-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  generate_project_file.bat  generate_project_files.sh
cmake/templates/: api.h.in
core/: App.cpp  App.h  CoreTypes.h  Events.h  Globals.cpp  Globals.h  Layer.cpp  Layer.h  LayerStack.h  Log.h  Macros.h  Toucan.h  Window.h  main.cpp  toucanengine.PCH.h
core/Core/: Events.h  Globals.h  LayerStack.h  Log.cpp
core/Core/Events/: KeyEvents.h  MouseEvents.h  WindowEvents.cpp  WindowEvents.h
core/Core/Reflection/: Reflection.h  Type.h
core/Darwin/: DarwinFileManager.cpp  DarwinFileManager.h  DarwinSubprocess.h  DarwinWindow.cpp  DarwinWindow.h
core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
core/RHI/: RHI_Buffer.cpp  RHI_Buffer.h  RHI_GraphicsAPI.cpp  RHI_GraphicsAPI.h  RHI_Resource.h  RHI_Shader.cpp  RHI_Shader.h
core/RHI/bgfx/: Bgfx_GraphicsAPI.cpp  Bgfx_GraphicsAPI.h  Bgfx_Shader.cpp  Bgfx_Shader.h  bgfxImGuiLayer.cpp  bgfxImGuiLayer.h  bgfxShader.cpp  bgfxShader.h  fs_imgui_image.bin.h  imgui_impl_bgfx.cpp  vs_imgui_image.bin.h
core/Renderer/: Buffer.cpp  Buffer.h  GraphicsAPI.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h
core/Utils/: FileManager.h  Path.cpp  Path.h  Subprocess.cpp  Subprocess.h
core/bgfx/: bgfxBuffer.h  bgfxGraphicsAPI.cpp  bgfxGraphicsAPI.h  bgfxGraphicsContext.h  bgfxImGuiLayer.cpp  bgfxImGuiLayer.h  bgfxShader.cpp  bgfxShader.h  fs_ocornut_imgui.bin.h  vs_ocornut_imgui.bin.h
data/Shaders/: fs_Color.sc  vs_Color.sc
editor/: EditorLayer.cpp  EditorLayer.h  ToucanEditor.cpp  ToucanEditor.h
scripts/: generate_project.py
src/: App.cpp  App.h  CoreTypes.h  Events.cpp  Events.h  Globals.cpp  Globals.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Macros.h  Toucan.h  Window.h  toucanengine.PCH.h
src/Core/Events/: KeyEvents.cpp  KeyEvents.h  MouseEvents.cpp  MouseEvents.h  WindowEvents.cpp  WindowEvents.h
src/Core/Reflection/: Reflection.h  Type.h
src/Darwin/: DarwinFileManager.cpp  DarwinFileManager.h  DarwinSubprocess.cpp  DarwinSubprocess.h  DarwinWindow.cpp  DarwinWindow.h
src/Renderer/: Buffer.cpp  Buffer.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h
src/Utils/: FileManager.h  Path.h  Subprocess.h
src/Windows/: WindowsWindow.cpp
src/bgfx/: bgfxBuffer.cpp  bgfxBuffer.h  bgfxGraphicsAPI.cpp  bgfxGraphicsAPI.h  bgfxGraphicsContext.h  bgfxShader.cpp  bgfxShader.h
